# system76-scheduler

./: .gitignore  Cargo.toml  INSTALL.md  Makefile  README.md  flake.nix  justfile  rust-toolchain.toml
config/: Cargo.toml
config/src/: cfs.rs  kdl.rs  lib.rs
config/src/parser/: cfs.rs  mod.rs  scheduler.rs
config/src/scheduler/: assignments.rs  mod.rs  profile.rs
daemon/: Cargo.toml
daemon/src/: config.rs  cpu.rs  dbus.rs  main.rs  nice.rs  paths.rs  pid.rs  priority.rs  process.rs  pw.rs  service.rs  utils.rs
daemon/src/cfs/: mod.rs
data/: assignments.kdl  assignments.ron  auto.ron  com.system76.Scheduler.conf  com.system76.Scheduler.service  config.kdl  config.ron  exceptions.ron  pop_os.kdl
debian/: changelog  conffiles  control  copyright  postinst  rules
execsnoop/: Cargo.toml
execsnoop/examples/: execsnoop.rs
execsnoop/src/: lib.rs
pipewire/: Cargo.toml
pipewire/examples/: monitor.rs
pipewire/src/: lib.rs
src/: config.rs  cpu.rs  dbus.rs  main.rs  nice.rs  paths.rs  priority.rs  upower.rs  utils.rs
