[package]
name = "system76-scheduler"
description = "Linux service that manages process priorities and CFS scheduler latencies for improved responsiveness on the desktop"
repository = "https://github.com/pop-os/system76-scheduler"
version = "1.0.0"
edition = "2018"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.52"
argh = "0.1.7"
futures = "0.3.19"
libc = "0.2.112"
num_cpus = "1.13.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_repr = "0.1.7"
thiserror = "1.0.30"
upower_dbus = "0.2.0"
zbus = "2.0.1"
zvariant = "3.0.0"
ron = "0.7.0"

[dependencies.tokio]
version = "1.15.0"
features = ["fs", "macros", "rt", "sync", "time"]
