[package]
name = "system76-scheduler"
description = "Linux service that manages process priorities and CFS scheduler latencies for improved responsiveness on the desktop"
repository = "https://github.com/pop-os/system76-scheduler"
version = "1.1.0"
edition = "2018"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.53"
argh = "0.1.7"
futures = "0.3.21"
libc = "0.2.117"
num_cpus = "1.13.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_repr = "0.1.7"
thiserror = "1.0.30"
upower_dbus = "0.2.0"
zbus = "2.1.1"
zvariant = "3.1.2"
ron = "0.7.0"
tracing = "0.1.30"
concat-in-place = "1.1.0"
itoa = "1.0.1"

[dependencies.tracing-subscriber]
version = "0.3.8"
features = ["env-filter"]

[dependencies.tokio]
version = "1.16.1"
features = ["fs", "macros", "rt", "sync", "time"]
