[package]
name = "system76-scheduler"
description = "Linux service that manages process priorities and CFS scheduler latencies for improved responsiveness on the desktop"
repository = "https://github.com/pop-os/system76-scheduler"
version = "2.0.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1.0.69"
futures = "0.3.27"
libc = "0.2.140"
num_cpus = "1.15.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_repr = "0.1.11"
thiserror = "1.0.39"
upower_dbus = "0.3.2"
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
zvariant = "3.12.0"
tracing = "0.1.37"
concat-in-place = "1.1.0"
itoa = "1.0.6"
fomat-macros = "0.3.2"
ioprio = "0.2.0"
compact_str = { version = "0.7.0", features = ["serde"] }
execsnoop = { path = "../execsnoop" }
clap = { version = "4.1.8", features = ["cargo"] }
system76-scheduler-config = { path = "../config" }
aho-corasick = "0.7.20"
memchr = "2.5.0"
bstr = "1.3.0"
atoi = "2.0.0"
system76-scheduler-pipewire = { path = "../pipewire"}
pipewire = "0.6.0"
qcell = "0.5.3"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

[dependencies.tokio]
version = "1.26.0"
features = ["fs", "macros", "rt", "sync", "time"]
