[package]
name = "execsnoop"
description = "Watch process ID creation in Linux kernel with execsnoop-bpfcc"
repository = "https://github.com/pop-os/system76-scheduler"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
publish = true

[dependencies]
atoi = "2.0.0"
bstr = "1.3.0"
bytelines = "2.4.0"
tracing = "0.1.37"
